crates/etch-core/tests/snapshots/corpus_tests__extensions-attributes-combined.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Reference card"
          }
        ],
        "attrs": {
          "id": "my-id",
          "classes": [
            "class1",
            "class2"
          ],
          "pairs": {
            "key": "value",
            "key2": "quoted value with spaces"
          }
        }
      }
    ]
  },
  "errors": []
}
