crates/etch-core/tests/snapshots/corpus_tests__extensions-attributes-escaped-quote.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Quoted label"
          }
        ],
        "attrs": {
          "pairs": {
            "key": "value with \"escaped quotes\" inside"
          }
        }
      }
    ]
  },
  "errors": []
}
