crates/etch-core/tests/snapshots/corpus_tests__extensions-attributes-on-heading.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Heading",
        "level": 1,
        "content": [
          {
            "type": "Text",
            "value": "Title"
          }
        ],
        "attrs": {
          "id": "my-id"
        }
      },
      {
        "type": "Heading",
        "level": 2,
        "content": [
          {
            "type": "Text",
            "value": "Subtitle"
          }
        ],
        "attrs": {
          "classes": [
            "special-class"
          ],
          "pairs": {
            "lang": "en"
          }
        }
      }
    ]
  },
  "errors": []
}
