crates/etch-core/tests/snapshots/corpus_tests__extensions-attributes-on-paragraph.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "A centered announcement for the station platform."
          }
        ],
        "attrs": {
          "classes": [
            "centered"
          ]
        }
      }
    ]
  },
  "errors": []
}
