crates/etch-core/tests/snapshots/corpus_tests__extensions-block-directives-blank-lines-inside.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "BlockDirective",
        "directive_id": 1,
        "span": {
          "start": {
            "line": 3,
            "column": 1
          },
          "end": {
            "line": 11,
            "column": 3
          }
        },
        "name": "aside",
        "raw_body": "First paragraph in the aside.\n\n\n\nSecond paragraph still belongs to the same directive.\n\nThird paragraph also remains inside until the closing fence.",
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "First paragraph in the aside."
              }
            ]
          },
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "Second paragraph still belongs to the same directive."
              }
            ]
          },
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "Third paragraph also remains inside until the closing fence."
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
