crates/etch-core/tests/snapshots/corpus_tests__extensions-block-directives-empty-body.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "BlockDirective",
        "name": "note",
        "body": []
      }
    ]
  },
  "errors": []
}
